Fixes for header on mobile, plus extra breakpoints.

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 body {
 	font-family: Planer-Regular, Arial, sans-serif;
-	background-color: #FFF;
+	background-color: #0077C0;
 	height: 100%;
 	margin: 0;
 	padding: 0;
@@ -189,9 +189,8 @@ h4, h5, h6, p { font-size: 1.2em; }
 .header-img {
 	display: cover;
 	position: fixed;
-	background: url(../images/header.svg) no-repeat center;
+	background: url(../images/header.svg) no-repeat center bottom;
 	background-size: 100%;
-	background-position: bottom;
 	z-index: -9999;	
 	width: 100%; 
 	height: 100%;
@@ -401,6 +400,16 @@ blockquote {
 
 /*MEDIA QUERIES*/
 
+@media (max-width: 480px){
+	.header-img {
+	background: url(../images/header.svg) no-repeat center bottom;
+	background-size: 150%;
+	overflow: hidden;
+	z-index: -9999;	
+	width: 100%; 
+	height: 100%;
+	}
+}
 @media (max-width: 767px){
 	body{
 		font-size: 12px;
@@ -420,9 +429,6 @@ blockquote {
 	#explore .has-padding-top{
 		padding-top: 10px;
 	}
-	.header-img{
-		width: 80%;
-	}
 }
 
 @media (min-width: 992px) {
@@ -431,6 +437,12 @@ blockquote {
 	}
 	.right {
 		padding-left: 35px;
+	}
+}
+
+@media (min-width: 1100px){
+	.header-img {
+	background-size: 80%;
 	}
 }
 
